--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -10,6 +10,8 @@
     "edit": "Modifier",
     "success": "Succès",
     "error": "Erreur",
+    "back": "Retour",
+    "or": "ou",
     "language_choice": "Choisir la langue",
     "items_count": "{{count}} article(s)",
     "my_shop": "Ma Boutique",
@@ -21,6 +23,7 @@
     "none": "Aucun",
     "yes": "Oui",
     "no": "Non",
+    "currency_default": "FCFA",
     "unknown_product": "Produit inconnu",
     "merchant": "Commerçant",
     "preferences_error": "Impossible de mettre à jour vos préférences.",
@@ -58,26 +61,65 @@
     "subscription": "Abonnement"
   },
   "subscription": {
+    "title": "Mon Abonnement",
+    "plan_starter": "Starter",
+    "plan_premium": "Premium",
+    "free_trial": "Essai gratuit",
+    "trial_remaining": "{{count}} jours restants d'essai gratuit",
+    "trial_banner": "3 mois d'essai gratuit, puis {{price}}/mois. Sans engagement.",
+    "compare_plans": "Comparaison des offres",
+    "popular": "Populaire",
+    "per_month": "/mois",
+    "choose_plan": "Choisir {{plan}}",
+    "pay_app_store": "Payer via App Store",
+    "pay_google_play": "Payer via Google Play",
+    "pay_mobile_money": "Payer via Mobile Money",
+    "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
+    "restore_purchase": "Restaurer un achat",
+    "active": "Actif",
+    "premium_active_text": "Votre abonnement Premium est actif. Merci de votre confiance !",
+    "renewal": "Renouvellement : {{date}}",
+    "mobile_money_label": " (Mobile Money)",
+    "activated_success": "Votre abonnement a été activé avec succès !",
+    "payment_failed": "Le paiement a échoué. Veuillez réessayer.",
+    "cinetpay_init_error": "Impossible d'initier le paiement Mobile Money. Réessayez.",
+    "iap_not_available": "Les achats in-app ne sont pas disponibles. Utilisez Mobile Money.",
+    "restored": "Restauré",
+    "restored_success": "Votre abonnement a été restauré.",
+    "no_purchase_found": "Aucun achat trouvé.",
+    "restore_error": "Impossible de restaurer les achats.",
     "features": {
-      "products": "Produits",
-      "stores": "Magasins",
-      "users": "Utilisateurs",
+      "products": "Produits & articles",
+      "products_desc": "Gérez votre catalogue complet : ajout, modification, code-barres, photos, catégories et suivi des prix d'achat/vente.",
+      "stores": "Points de vente",
+      "stores_desc": "Gérez un ou plusieurs magasins avec stocks indépendants et suivi séparé des performances de chaque emplacement.",
+      "users": "Utilisateurs & équipe",
+      "users_desc": "Ajoutez des collaborateurs (vendeurs, gérants) avec des rôles et permissions personnalisés pour chaque membre de l'équipe.",
       "pos": "Caisse (POS)",
-      "pdf_receipts": "Reçus PDF",
-      "reports": "Rapports",
-      "ai_assistant": "Assistant IA",
-      "suppliers_orders": "Fournisseurs & Commandes",
+      "pos_desc": "Point de vente tactile : scan code-barres, panier, multi-paiement (espèces, Mobile Money, carte), reçus numériques et gestion des ventes à crédit.",
+      "pdf_receipts": "Reçus & factures PDF",
+      "pdf_receipts_desc": "Générez des reçus et factures PDF professionnels partageables par WhatsApp ou email, avec votre logo et coordonnées.",
+      "reports": "Rapports & statistiques",
+      "reports_desc": "Tableaux de bord détaillés : chiffre d'affaires, marges, produits les plus vendus, analyse ABC, tendances et export CSV/PDF.",
+      "ai_assistant": "Assistant IA Stockman",
+      "ai_assistant_desc": "Posez vos questions en langage naturel : suggestions de réapprovisionnement, analyse des ventes, prévisions de stock et conseils de gestion.",
+      "suppliers_orders": "Fournisseurs & commandes",
+      "suppliers_orders_desc": "Carnet de fournisseurs complet, création de commandes, suivi des livraisons, gestion des retours et avoirs, historique des échanges.",
       "csv_import_export": "Import/Export CSV",
-      "crm_loyalty": "CRM & Fidélité",
-      "sms_alerts": "Alertes SMS",
-      "support": "Support",
+      "csv_import_export_desc": "Importez votre catalogue depuis un fichier CSV et exportez vos données (produits, ventes, clients) en un clic.",
+      "crm_loyalty": "CRM & programme de fidélité",
+      "crm_loyalty_desc": "Base clients avec historique d'achats, système de points de fidélité, niveaux Bronze/Argent/Or/Platine, promotions et campagnes marketing.",
+      "sms_alerts": "Alertes SMS & notifications",
+      "sms_alerts_desc": "Recevez des alertes automatiques en cas de rupture de stock, produit dormant ou péremption imminente. Notifications push en temps réel.",
+      "support": "Support client",
+      "support_desc": "Assistance pour résoudre vos problèmes et optimiser votre utilisation de Stockman.",
       "unlimited": "Illimités",
       "with_watermark": "Avec mention Stockman",
       "custom_logo": "Logo personnalisé",
       "30_days": "30 derniers jours",
       "full_history": "Historique complet",
       "14_req_week": "14 requêtes/semaine",
-      "consultation": "Consultation",
+      "consultation": "Consultation seule",
       "full_management": "Gestion complète",
       "email_24h": "Email (24h)",
       "whatsapp_2h": "WhatsApp prioritaire (2h)"
@@ -286,7 +328,7 @@
   "premium": {
     "with_premium_you_can": "Avec Premium, vous pouvez :",
     "upgrade_now": "Passer à Premium",
-    "pricing_hint": "À partir de 5 000 FCFA / mois",
+    "pricing_hint": "À partir de 1 000 FCFA / mois",
     "features": {
       "orders": {
         "title": "Commandes Intelligentes",
@@ -313,6 +355,16 @@
           "Analyse profits/pertes détaillée",
           "Rapports PDF/Excel pros",
           "Support multi-devises"
+        ]
+      },
+      "crm": {
+        "title": "CRM & Programme de Fidélité",
+        "desc": "Fidélisez vos clients avec un suivi personnalisé et un programme de récompenses.",
+        "benefits": [
+          "Base clients avec historique d'achats complet",
+          "Programme de fidélité (Bronze, Argent, Or, Platine)",
+          "Campagnes marketing WhatsApp ciblées",
+          "Gestion des dettes et crédits clients"
         ]
       }
     }
