--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -10,6 +10,9 @@
     "edit": "Editar",
     "success": "Éxito",
     "error": "Error",
+    "back": "Atrás",
+    "or": "o",
+    "currency_default": "FCFA",
     "language_choice": "Elegir idioma",
     "items_count": "{{count}} artículo(s)",
     "my_shop": "Mi Tienda",
@@ -56,6 +59,59 @@
     "activity": "Actividad",
     "admin": "Admin",
     "subscription": "Suscripción"
+  },
+  "subscription": {
+    "title": "Mi Suscripción",
+    "plan_starter": "Starter",
+    "plan_premium": "Premium",
+    "free_trial": "Prueba gratuita",
+    "trial_remaining": "{{count}} días restantes de prueba gratuita",
+    "trial_banner": "3 meses de prueba gratuita, luego {{price}}/mes. Sin compromiso.",
+    "compare_plans": "Comparar planes",
+    "popular": "Popular",
+    "per_month": "/mes",
+    "choose_plan": "Elegir {{plan}}",
+    "pay_app_store": "Pagar vía App Store",
+    "pay_google_play": "Pagar vía Google Play",
+    "pay_mobile_money": "Pagar vía Mobile Money",
+    "mm_providers": "Orange Money, Wave, MTN Money, Moov Money",
+    "restore_purchase": "Restaurar compra",
+    "active": "Activo",
+    "premium_active_text": "Tu suscripción Premium está activa. ¡Gracias por tu confianza!",
+    "renewal": "Renovación: {{date}}",
+    "mobile_money_label": " (Mobile Money)",
+    "activated_success": "¡Tu suscripción ha sido activada con éxito!",
+    "payment_failed": "El pago ha fallado. Por favor, inténtalo de nuevo.",
+    "cinetpay_init_error": "Imposible iniciar el pago Mobile Money. Inténtalo de nuevo.",
+    "iap_not_available": "Las compras in-app no están disponibles. Usa Mobile Money.",
+    "restored": "Restaurado",
+    "restored_success": "Tu suscripción ha sido restaurada.",
+    "no_purchase_found": "No se encontró ninguna compra.",
+    "restore_error": "Imposible restaurar las compras.",
+    "features": {
+      "products": "Productos & artículos",
+      "stores": "Puntos de venta",
+      "users": "Usuarios & equipo",
+      "pos": "Caja (POS)",
+      "pdf_receipts": "Recibos & facturas PDF",
+      "reports": "Informes & estadísticas",
+      "ai_assistant": "Asistente IA Stockman",
+      "suppliers_orders": "Proveedores & pedidos",
+      "csv_import_export": "Import/Export CSV",
+      "crm_loyalty": "CRM & programa de fidelidad",
+      "sms_alerts": "Alertas SMS & notificaciones",
+      "support": "Soporte al cliente",
+      "unlimited": "Ilimitados",
+      "with_watermark": "Con mención Stockman",
+      "custom_logo": "Logo personalizado",
+      "30_days": "Últimos 30 días",
+      "full_history": "Historial completo",
+      "14_req_week": "14 consultas/semana",
+      "consultation": "Solo consulta",
+      "full_management": "Gestión completa",
+      "email_24h": "Email (24h)",
+      "whatsapp_2h": "WhatsApp prioritario (2h)"
+    }
   },
   "store_selector": {
     "my_stores": "Mis Tiendas",
@@ -258,35 +314,45 @@
     "total_expenses_kpi": "Total gastos"
   },
   "premium": {
-    "with_premium_you_can": "With Premium, you can:",
-    "upgrade_now": "Upgrade to Premium",
-    "pricing_hint": "Starting from 5,000 FCFA / month",
+    "with_premium_you_can": "Con Premium, puedes:",
+    "upgrade_now": "Actualizar a Premium",
+    "pricing_hint": "Desde 1 000 FCFA / mes",
     "features": {
       "orders": {
-        "title": "Smart Ordering",
-        "desc": "Automate your orders and manage returns professionally.",
+        "title": "Pedidos Inteligentes",
+        "desc": "Automatiza tus pedidos y gestiona devoluciones profesionalmente.",
         "benefits": [
-          "Auto-generate orders based on stock",
-          "Advanced return management",
-          "Supplier performance tracking"
+          "Generación automática de pedidos",
+          "Gestión avanzada de devoluciones",
+          "Seguimiento de rendimiento de proveedores"
         ]
       },
       "suppliers": {
-        "title": "Marketplace Access",
-        "desc": "Connect with thousands of verified suppliers and compare prices.",
+        "title": "Acceso al Marketplace",
+        "desc": "Conéctate con miles de proveedores verificados y compara precios.",
         "benefits": [
-          "Global marketplace access",
-          "Direct supplier chat",
-          "Exclusive bulk discounts"
+          "Acceso al catálogo global",
+          "Chat directo con proveedores",
+          "Descuentos exclusivos al por mayor"
         ]
       },
       "accounting": {
-        "title": "Financial Intelligence",
-        "desc": "Deep dive into your business metrics and export official reports.",
+        "title": "Inteligencia Financiera",
+        "desc": "Analiza tus métricas en profundidad y exporta informes oficiales.",
         "benefits": [
-          "Detailed profit/loss analysis",
-          "Professional PDF/Excel reports",
-          "Multi-currency support"
+          "Análisis detallado de ganancias/pérdidas",
+          "Informes PDF/Excel profesionales",
+          "Soporte multidivisa"
+        ]
+      },
+      "crm": {
+        "title": "CRM & Programa de Fidelidad",
+        "desc": "Fideliza a tus clientes con seguimiento personalizado y un programa de recompensas.",
+        "benefits": [
+          "Base de clientes con historial de compras completo",
+          "Programa de fidelidad (Bronce, Plata, Oro, Platino)",
+          "Campañas de marketing WhatsApp dirigidas",
+          "Gestión de deudas y créditos de clientes"
         ]
       }
     }
